--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Build a Product Landing Page</title>
     <link rel="stylesheet" href="./css/style.css">
     <link
       rel="stylesheet"
